--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,7 +6,8 @@
     <th>Orbit Type</th>
     <th>Launch Date</th>
   </tr>
-  <tr class="data-row" *ngFor="let satellite of satellites">
+  <tr class="data-row" *ngFor="let satellite of satellites"
+    [ngClass]="(satellites.indexOf(satellite) % 2) === 0 ? 'active' : ''">
     <td>{{satellite.name}}</td>
     <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
     <td>{{satellite.operational}}</td>
